cleaner code, jooq code generator, better design for currency
